--- a/src/main/resources/templates/nuevoUsuario.html
+++ b/src/main/resources/templates/nuevoUsuario.html
@@ -31,50 +31,68 @@
 							<div
 								class="card-header d-flex justify-content-between align-items-center">
 								<h5 class="mb-0">Registro de Usuario</h5>
-								<small class="text-body float-end">Default label</small>
+<!--								<small class="text-body float-end">Default label</small>-->
 							</div>
 							<div class="card-body">
 								<form th:action="@{/guardarUsuario}" th:object="${nuevoUsuario}"
 									method="post">
 									<div class="form-floating form-floating-outline mb-6">
 										<input th:field="*{nombre}" type="text" class="form-control"
-											id="nombre" placeholder="John Doe" /> <label
-											for="basic-default-fullname">Nombre</label>
+											id="name" placeholder="John Doe" /> <label
+											for="name">Nombre</label>
 									</div>
 									<div class="form-floating form-floating-outline mb-6">
 										<input th:field="*{apellido}" type="text" class="form-control"
-											id="apellido" placeholder="John Doe" /> <label
-											for="basic-default-fullname">Apellido</label>
+											id="lastName" placeholder="John Doe" /> <label
+											for="lastName">Apellido</label>
 									</div>
 									<div class="form-floating form-floating-outline mb-6">
 										<input th:field="*{direccion}" type="text"
-											class="form-control" id="basic-default-company"
+											class="form-control" id="address"
 											placeholder="ACME Inc." /> <label
-											for="basic-default-company">Direccion</label>
+											for="address">Direccion</label>
 									</div>
 									<div class="mb-6">
 										<div class="input-group input-group-merge">
 											<div class="form-floating form-floating-outline">
 												<input th:field="*{email}" type="text"
-													id="basic-default-email" class="form-control"
+													id="email" class="form-control"
 													placeholder="john.doe" aria-label="john.doe"
-													aria-describedby="basic-default-email2" /> <label
-													for="basic-default-email">Email</label>
+													aria-describedby="email" /> <label
+													for="email">Email</label>
 											</div>
-											<span class="input-group-text" id="basic-default-email2">@example.com</span>
+<!--											<span class="input-group-text" id="basic-default-email2">@example.com</span>-->
 										</div>
 									</div>
 									<div class="form-floating form-floating-outline mb-6">
-										<input th:field="*{password}" type="text"
-											class="form-control" id="basic-default-company"
+										<input th:field="*{password}" type="password"
+											class="form-control" id="password"
+											   name="password"
 											placeholder="ACME Inc." /> <label
-											for="basic-default-company">Contraseña</label>
+											for="password">Contraseña</label>
 									</div>
 									<div class="form-floating form-floating-outline mb-6">
-										<input th:field="*{telefono}" type="text"
-											id="basic-default-phone" class="form-control phone-mask"
+										<input th:field="*{telefono}" type="number"
+											id="phone" class="form-control phone-mask"
 											placeholder="658 799 8941" /> <label
-											for="basic-default-phone">Telefono</label>
+											for="phone">Telefono</label>
+									</div>
+									<div class="form-floating form-floating-outline mb-6">
+										<select th:field="*{fkRoles}" id="role" class="form-control">
+											<option th:value="1" th:text="Administrador"></option>
+											<option th:value="2" th:text="Lector"></option>
+										</select>
+										<label for="role">Rol</label>
+									</div>
+									<div class=" mb-6 form-check form-switch">
+										<input th:checked="*{activo}"
+											   name="activo"
+											   type="checkbox"
+											   class="form-check-input"
+											   id="active"
+											   th:value="*{activo}"
+										/>
+										<label for="active" class="form-check-label">Activo</label>
 									</div>
 									<input type="hidden" th:field="*{idUsuario}">
 
