Agregar menú personalizado

--- a/src/main/resources/templates/Plantilla/Plantilla.html
+++ b/src/main/resources/templates/Plantilla/Plantilla.html
@@ -127,6 +127,35 @@
           <div class="menu-inner-shadow"></div>
 
           <ul class="menu-inner py-1">
+            <!-- My Menu -->
+            <li class="menu-item">
+              <a
+                      href="/lista"
+                      target="_self"
+                      class="menu-link">
+                <i class="menu-icon tf-icons ri-user-2-fill"></i>
+                <div data-i18n="Usuarios">Usuarios</div>
+              </a>
+            </li>
+            <li class="menu-item">
+              <a
+                      href="/roles"
+                      target="_self"
+                      class="menu-link">
+                <i class="menu-icon tf-icons ri-key-2-fill"></i>
+                <div data-i18n="Roles">Roles</div>
+              </a>
+            </li>
+            <li class="menu-item">
+              <a
+                      href="/libros"
+                      target="_self"
+                      class="menu-link">
+                <i class="menu-icon tf-icons ri-book-2-fill"></i>
+                <div data-i18n="Roles">Libros</div>
+              </a>
+            </li>
+
             <!-- Dashboards -->
             <li class="menu-item">
               <a href="javascript:void(0);" class="menu-link menu-toggle">
