--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -116,12 +116,28 @@
     <!-- Contenedor del formulario -->
     <div class="login-container">
         <h2>Iniciar Sesión</h2>
-        <form th:action="@{/login}" method="post" th:object="${credenciales}">
+        <form
+                th:action="@{/login}"
+                role="form"
+                method="post"
+        >
             <div>
-                <input type="email" id="email" th:field="*{email}" placeholder="Ingrese su email" required>
+                <input
+                        type="email"
+                        id="username"
+                        name="username"
+                        placeholder="Ingrese su email"
+                        required
+                >
             </div>
             <div>
-                <input type="password" id="password" th:field="*{password}" placeholder="Ingrese su contraseña" required>
+                <input
+                        type="password"
+                        id="password"
+                        name="password"
+                        placeholder="Ingrese su contraseña"
+                        required
+                >
             </div>
             <div>
                 <button type="submit">Iniciar Sesión</button>
