--- a/src/main/resources/templates/listarLibro.html
+++ b/src/main/resources/templates/listarLibro.html
@@ -2,6 +2,7 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6"
       layout:decorate="~{Plantilla/Plantilla}">
 <head>
     <meta charset="utf-8" />
@@ -13,8 +14,8 @@
 <div layout:fragment="espaciocontenidohtml">
     <div class="container-fluid flex-grow-1 container-p-y">
         <!-- Botón para agregar un nuevo libro -->
-        <div>
-            <a th:href="@{/nuevoLibro}" class="btn btn-outline-primary">
+        <div sec:authorize="hasAuthority('ADMINISTRADOR')">
+            <a th:href="@{/libro/nuevoLibro}" class="btn btn-outline-primary">
                 <i class="fa fa-plus"></i> Agregar Nuevo Libro
             </a>
         </div>
@@ -38,13 +39,13 @@
                             <td th:text="${libro.tituloLibro}"></td>
                             <td th:text="${libro.generoLibro}"></td>
                             <td th:text="${libro.anioPublicacion}"></td>
-                            <td>
+                            <td sec:authorize="hasAuthority('ADMINISTRADOR')">
                                 <!-- Enlace para editar -->
-                                <a th:href="@{/editarLibro/}+${libro.id}" class="btn btn-outline-success btn-sm">
+                                <a th:href="@{/libro/editarLibro/{id}(id=${libro.id})}" class="btn btn-outline-success btn-sm">
                                     Editar
                                 </a>
                                 <!-- Enlace para eliminar -->
-                                <a th:href="@{/eliminarLibro/}+${libro.id}" class="btn btn-outline-danger btn-sm">
+                                <a th:href="@{/libro/eliminarLibro/{id}(id=${libro.id})}" class="btn btn-outline-danger btn-sm">
                                     Eliminar
                                 </a>
                             </td>
