--- a/src/main/resources/templates/listarAutores.html
+++ b/src/main/resources/templates/listarAutores.html
@@ -14,7 +14,7 @@
     <div class="container-fluid flex-grow-1 container-p-y">
         <!-- Botón para agregar un nuevo libro -->
         <div>
-            <a th:href="@{/nuevoAutor}" class="btn btn-outline-primary">
+            <a th:href="@{/autor/nuevoAutor}" class="btn btn-outline-primary">
                 <i class="fa fa-plus"></i> Agregar Nuevo Autor
             </a>
         </div>
@@ -40,11 +40,13 @@
                         <td th:text="${autor.nacionalidad}"></td>
                         <td>
                             <!-- Enlace para editar -->
-                            <a th:href="@{/editarAutor/}+${autor.id}" class="btn btn-outline-success btn-sm">
+                            <a th:href="@{/autor/editarAutor/{id}(id=${autor.id})}"
+                               class="btn btn-outline-success btn-sm">
                                 Editar
                             </a>
                             <!-- Enlace para eliminar -->
-                            <a th:href="@{/eliminarAutor/}+${autor.id}" class="btn btn-outline-danger btn-sm">
+                            <a th:href="@{/autor/eliminarAutor/{id}(id=${autor.id})}"
+                               class="btn btn-outline-danger btn-sm">
                                 Eliminar
                             </a>
                         </td>
