--- a/src/main/resources/templates/nuevoUsuario.html
+++ b/src/main/resources/templates/nuevoUsuario.html
@@ -34,7 +34,7 @@
 <!--								<small class="text-body float-end">Default label</small>-->
 							</div>
 							<div class="card-body">
-								<form th:action="@{/guardarUsuario}" th:object="${nuevoUsuario}"
+								<form th:action="@{/usuario/guardarUsuario}" th:object="${nuevoUsuario}"
 									method="post">
 									<div class="form-floating form-floating-outline mb-6">
 										<input th:field="*{nombre}" type="text" class="form-control"
@@ -79,8 +79,8 @@
 									</div>
 									<div class="form-floating form-floating-outline mb-6">
 										<select th:field="*{fkRoles}" id="role" class="form-control">
-											<option th:value="1" th:text="Administrador"></option>
-											<option th:value="2" th:text="Lector"></option>
+											<option value="">Seleccione el rol...</option>
+											<option th:each="role: ${roles}" th:value="${role.idRol}" th:text="${role.nombreRol}"></option>
 										</select>
 										<label for="role">Rol</label>
 									</div>
@@ -107,5 +107,7 @@
 					<!--/ Layout Demo -->
 				</div>
 			</div>
+		</div>
+	</div>
 </body>
 </html>
