Agregar página de error Agregar controlador para el error Agregar configuración global para manejar errores Agregar propiedades

--- a/src/main/resources/templates/listaRoles.html
+++ b/src/main/resources/templates/listaRoles.html
@@ -41,10 +41,10 @@
 								<td>
 									<!-- Enlace para modificar --> 
 <!--									<a th:href="@{/rol/editarRol/}+${roles.idRol}"-->
-									<a th:href="@{/rol/editarRol/{id}(id=${roles.id})}"
+									<a th:href="@{/rol/editarRol/{id}(id=${roles.idRol})}"
 									class="btn btn-outline-success btn-sm"> Modificar </a>
 									<!-- Enlace para eliminar -->
-									<a th:href="@{/rol/eliminarRol/{id}(id=${roles.id})}"
+									<a th:href="@{/rol/eliminarRol/{id}(id=${roles.idRol})}"
 									class="btn btn-outline-danger btn-sm"> Eliminar </a>
 								</td>
 							</tr>
