--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -74,7 +74,7 @@
         }
 
         /* Estilos de los inputs */
-        input[type="email"], input[type="password"] {
+        input[type="email"], input[type="password"], input[type="text"] {
             width: 100%;
             padding: 10px 15px;
             margin: 10px 0;
